--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Belly Button Jet
 Cactuar/Archives
 Candy O'Lantern/Archives
 Doctor Liche/Archives
-Doom Slayer (Pending)
+Doom Slayer/Archives
 Drop
 Evileye/Archives
 Jimi Hendice/Archives
