--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Candy O'Lantern/Archives
 Doctor Liche/Archives
 Doom Slayer/Archives
 Drop
+Eva-01/Archives
 Evileye/Archives
 Jimi Hendice/Archives
 Lemongrab/Archives
