--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,31 @@
 
 Scene.blend
+Barry
 Belly Button Jet
+Bridget/Archives
+Bump/Archives
 Cactuar/Archives
 Candy O'Lantern/Archives
 Doctor Liche/Archives
 Doom Slayer/Archives
+Doombox 3D Print
 Drop
 Eva-01/Archives
 Evileye/Archives
 Jimi Hendice/Archives
 Lemongrab/Archives
+Mazda MX-5 NA/Archives
+Metabee
 Momonga/Archives
+Neco-Arc/Archives
+Noise Clone Rooftop
 Phantom of The Opera/Archives
 Queen's Guard
 Sbire/Archives
 Sir Greed/Archives
 Sunglasses Jet/Archives
+Supercharged 2 Tag
+Technoblade/Archives
 Valkyrie/Archives
 Xi/Archives
 Zato/Archives
