Chainsaw Man Power

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Bridget/Archives
 Bump/Archives
 Cactuar/Archives
 Candy O'Lantern/Archives
+ChainsawMan Power/Archives
 Doctor Liche/Archives
 Doom Slayer/Archives
 Doombox 3D Print
