Century Six Jacket

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Belly Button Jet
 Bridget/Archives
 Bump/Archives
 Cactuar/Archives
+Century Six Jacket Raptor/Archives
 Candy O'Lantern/Archives
 ChainsawMan Power/Archives
 Doctor Liche/Archives
