Upload Spirit of The Season (Dust&Ashes)

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ Sbire/Archives
 Sir Greed/Archives
 Sunglasses Jet/Archives
 Supercharged 2 Tag
+Spirit of The Season/Archives
 Technoblade/Archives
 Valkyrie/Archives
 Xi/Archives
